--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-IBM_API_KEY=YOUR_KEY_HERE
+QISKIT_IBM_TOKEN="MY_IBM_CLOUD_API_KEY"
+QISKIT_IBM_INSTANCE="MY_IBM_CLOUD_CRN"
+QISKIT_IBM_CHANNEL="local"  # local or ibm_quantum_platform
