fix(env): fix ibm channel

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 QISKIT_IBM_TOKEN="MY_IBM_CLOUD_API_KEY"
 QISKIT_IBM_INSTANCE="MY_IBM_CLOUD_CRN"
-QISKIT_IBM_CHANNEL="ibm_quantum_platform"
+QISKIT_IBM_CHANNEL="local"  # or ibm_quantum_plataform
