--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 matplotlib==3.10.7
+pandas==2.3.3
 pylatexenc==2.10
 python-dotenv==1.2.1
 qiskit==2.2.3
 qiskit-aer==0.17.2
 qiskit-ibm-runtime==0.43.1
+seaborn==0.13.2
